    So screen is started by default except running in gtk mode.

  [ Martin Michlmayr ]
  * Exclude dependency of screen-udeb on orion5x image.
  * Reduce size of orion5x image for QNAP to fit in flash:
    - Split orion5x into orion5x and orion5x-qnap.  This is based on
      work done by Roger Shimizu.
    - Exclude the text frontend.
    - Exclude qcontrol due to size constraints.

 -- Roger Shimizu <rogershimizu@gmail.com>  Mon, 04 Jul 2016 23:43:17 +0200

debian-installer (20160630) unstable; urgency=medium

  [ Cyril Brulebois ]
  * Make version build-deps use -1~ version suffixes instead of -1 to
    make lintian happy (build-depends-on-1-revision tag)
  * Bump Linux kernel version from 4.5.0-2 to 4.6.0-1
  * Update translation-status for the release.

  [ Aurelien Jarno ]
  * Add mipsel octeon images.
  * Drop mipsel cobalt support.
  * Add mips64el support.
  * Drop mipsel/loongson-2e and mipsel/loongson-2f images.

  [ Samuel Thibault ]
  * Produce two beeps when booted with grub instead of one, so the user knows
    he has to use the grub way to edit entries.
  * Bump gnumach version to 1.7.

  [ Roger Shimizu ]
  * ARM: orion5x: Add a few Linkstation devices to netboot target.
    Those devices are still in network-console target.
  * ARM: orion5x: Change initrd to XZ compression for all orion5x-based
    Linkstation devices.

  [ Steven Chamberlain ]
  * Bump kfreebsd (kernel) version to 10.3.

  [ Martin Michlmayr ]
  * Use XZ compression for QNAP on Kirkwood due to size restrictions.
  * Mark fb-modules as required for armhf's netboot-gtk flavour.
  * Add u-boot config script for Seagate Personal Cloud and Seagate NAS.

 -- Cyril Brulebois <kibi@debian.org>  Thu, 30 Jun 2016 00:56:34 +0200

debian-installer (20160516) unstable; urgency=low

  [ Martin Michlmayr ]
  * Provide u-boot images for OpenRD.
  * Remove mipsel/bcm947xx config file.
  * Use gpgv1.4-udeb for orion5x network-console so the ramdisk fits
    in flash on QNAP TS-x09 devices.